[package]
name = "sorting-hat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
shuttle-serenity = "0.49"
shuttle-runtime = "0.49"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = "1.26"
tracing = "0.1"
reqwest = "0.12"
