[package]
name = "sorting-hat"
version = "0.2.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = "0.13"
dotenv = "0.15"
poem = "3.1"
